feat: configuration rework (#121)